--- a/CapaPresentacion/frmMenu.resx
+++ b/CapaPresentacion/frmMenu.resx
@@ -118,6 +118,206 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="button1.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAAHgAAAB4CAYAAAA5ZDbSAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAL
+        EwAACxMBAJqcGAAAAAd0SU1FB98LAQYVMYI2yLIAAC1ySURBVHhe7Z0HmBzF0YaPnIMJxpgMJhow2GRj
+        ggFjbJLJYJPB5IwASQQRRBIgogQiS4TfiAzKEqdTzjnneHfKCBDJof/vre0ZZmd7727v9qQTqJ7ne2Z2
+        dkJPV1d1VXV1T8mPjebOneP3CqPaXreK6pGqYor+20E4SDhZuFS4OoGrhBOFI4V9hbX9ZVmk435vFdU7
+        pStbvzcUthS2Ev4g3CQ0Ee4Ubhb+Khwo8P8a/rKYdGxrYU/hKOEK4W6hscA9/iZsJ2wh/ExY3V+2iopN
+        qly/Z/tUOsz4p/BnYR8PmFUlE/R/1rYq0jkwdS+Bex8uXCBcK/zBn7KKikGq0LWFjYQ/CY8K5/q/jPTb
+        tl988YVtqyOdtxrwP/NSdL/o/hHp9/7Cg8J1wi+FDfxfdi5YRXkoWTnaR/UipWcJhwm/9H/FFGKqjv1M
+        OEQ4V7hJaCG0EdoJ7wgfCh8IbwivC08KTYRLhT8KO/pb5ZDK4Pdsfx0B9X+8cCX7/q9VTM5HqpjVhU0F
+        +sFr/WEjVbzfy5B+ryWsJ+wq3C70FP4ruCJhnPC4ANM3EtYR/NMz5UkyUvtHCC2FnYQ1/eGfNrOTL6/9
+        Y4SLBFRxbNEmKxXS7z8JjwllwiIhxJxi4z/CKOFV4UJhY1+cEKPRNmcKfxesK0j+/5Og6IXZCljCzwm/
+        tYMpUgXSZ24hPCcUU0Lrim7CocIagi9t1rutJjwm7GsHRNF/P2pKVACq7GLhNDsgqqgo93vGWPrSG4S+
+        QqiCg/j6qy/dd19/5f7z7VfOfbfMue+/dl99+aVbtGSpm16xyM2oXOymVy5ylYs+d0uXfuH+963O0Xn/
+        1fb7b75y3yz70n35ZfjeeTBDQJXv74tesmTJEr9n74n7dj5bf+jHS3rJaIt7c2HymCoo2q4pPC2gFkMV
+        moMvgZiyUEz8eNgsd9+n49zZLw5x+zXv5Ta9tavb+JYuebHRzV3c7s1K3fFPD3C3th/t2vad5qaWL3LL
+        1Ci4b+h5efA/ob+wtb1IivSeBFweF/AK4vf+UVD0Mtr+SrhEODg6rgqx/7TdVnhQ+EoIVaABCf2fJG7W
+        vMXuIzGz2cfj3GkvDHK/uqfUrXZNR7f6tR3dWtd3cuve0NltcFNnY2B12OCmLm69Gzu7tXXdGtd2ciVX
+        d3Bb3tbNHd2yn7vpnVHutT7T3Mjp892/JeHfSjvUgPHthSPtxUTl5XNtq/ddX0CaT/C/7fhKTdFLaHuu
+        QLjQghHJl1NlNBK+9ZUTBBKKCn1/yEx3+GN93WaNurpNbukaZFixgaT/TJqARvRo5wmmKZapoYXKmQAa
+        qIewnn9He1feWyBYc2f0e6WkqODabiBcLvwueRzSS2MRjxFCFWTSCmO7jZ7jbpH6/MUd3U1K15e0hRhR
+        39hQkr7mdRntgNZ4s/90N3v+Ymt4ofJ7wGj88bV45yVLFtu7qx42Fwin7ul/2/GVilTo7YWHBJPaefPm
+        WUvmZYUOQt5+9r8ykt4dPNPteV9Ph7RSuaFKX1HYUNhEkr1Nk+7u9vdGW2Ok3w69i8dsYXfq4fPPP2dD
+        /eD3nyec4n/b8ZWCVNiDhUv9fqyitP29MF3IqQTU3oLFn5sa3q95mfWnhTAWyV6HflRSRuVvf2cPt88D
+        Ze7AR3q7Pzze1x37VH93zJP93bHCUU/0c4c82sft/2Avt/PdpW4L9blcRz9Mf1zIc+nzeV7zDuPdpLkL
+        zYoPvZ/HjUJWN6UtMYC/R8ei4w2OEgUmMH+Q/RDphaLtvcL3Qs6LY8D0nlDh9hVD6PNqWsEwA7XJ9qRW
+        A90TXSe6vhMr3GRVNC5R+YIl5hLRcHCVIixc8rmbp+MVC5eYwYblPGbmfNdOVvSlbYe7ne76TAZXR1PH
+        SGvo2WlQ5m2b9HD3fzrefbusSiYPFYiOxa6h6ou4div70ZBJhWSI7mj2582rtGN6kY0FYsA5L/ut/M6J
+        cxa6y9oNN+u1OsZiGSNl2zXtYVJ4z0fj3MDJlebv4styvwL92Cygamls3G96xWLXunSKO6X1ILeXugo0
+        BA0pVK4k0Dy/e6i3KxtXXpUxNlfYh/pZunSp1ZPqbS3hDsEiedra8RVOUUG0ZThtJ/YrKyvsmF5iM2Gy
+        f6ksEFR47rPJ1uqrc2lwZUpkYB0sdfvBkFluSvlC9/nSjFqvC0OrAu4Q/SqBEoyp/pMq3SWvD7NuoDpG
+        01Dxwf/x6tDYWAw8Y5lwNvWUYDKuVEv70ZBIhUJy92M/iuSo8PsK3/iXiUGFzZm/xF355giTxlAFRaAi
+        kdZTJUUmqf/ORKbS91wegOFINyq/0buj3e739rTyVaV1+H+3Zj3VOCqsQYfuK1xmFZYg1SUDLuv4fTu2
+        3Cl6sLYMl1ksefHijBugQh8mQFkvQ2seNm2e2/v+MuvfQpUCkGhcoqYfjHHjZi0QU2kY2fdaUYDRvMcc
+        SfW/Bs5wO6q/rvpduljgJNM352XyQ5l6iyWZUTU7tkIowdzfCYexv3DhQjumwh6RKrwBNUX0CanNZ7hQ
+        Gai2vzw7wIyfaizSFQ4aHd3E7e+NMT+9qq5mPTUCJB8jL4/KbmwV6En1Sp98j8DAhT+6HEkPxRU6h318
+        XEiF3EtQI/+h4EsFwosPyI0IvXgE1BluTenYuXZdffWttUFkfPEuof9RvxNkLF7w6jCzFULvB2jcuGpY
+        76H7CPdRjwlfeRfB+unlwuToIdqScXEL+1GsVYXbLlVYA33m1W+NMOsy9NKZoEFXd97LQ3OubQigoW3W
+        +DO36/293JLPJX2BcyKgcYhwVWU4oqUOkrE4X65bnkZ8llWoJ9XzOcIf/b4dqzeKHqCtmfP8VoEAfh1D
+        Z3FBae24Lte+PTJveJFKQLWhur9vgOqYMjX+cJwruaqzJLOzO+aZQXmlGCDlXDNWdsOJzw3M2zdznCDL
+        tIpFwfsIlnuWqO/TBCKD9rteKPGwpsLP7YcnFWhwqoCmtrCUCUSEXhLJJbCxUC25oRhQaZRLlW4u6d3q
+        zlK37d1lbr1bu7v+suZD5yKNN7Yf7UbNXGC/UesXvTYsr73B8QMe7m1Bl4BWoJvbgbqtqKigztcUsvro
+        eiE9ZD/hEPaxmFUIQCpLVgF5ubs+HJvXX0Rdn/vyEDdfLkdD6mvT+Gj4bLf6jd3cmS8Pc22lekuu7OTu
+        kTXM+6XP/U4N+udNS/X/BBuAsISD/33jXu0z1Zi5caoOwDqSZJg8d0GwT54jrG8VL0Ko6p3JesCtAmk0
+        9ltbRoSyCsbLvz1guo2tpl8IoK5vaT/K/UeVkL62IYEgx82yjkuu6uRKx5VbdKvkui5ux3vLcroTgi4c
+        2+fhPu6E1oPdPZ+Mdwc91s9tdFsP90Kvae6T4bOqdKXObDNY91iadU8PUoNWF6y+Vfe7ChYG1taOFY10
+        w7uELfxPmMsg/XdCXCBUTYcRs61lhl4E3/bmd0ZVaag0FGA/bHdPmdtKUsnoFv3rqS8OdSX/7OjaD55p
+        BtUQ+fSXvjnS/eHJAe73LfubKv/FnT3dDe3HuIe7THTPlE5xA6dU2rUwmZGxUL3QjZFc8B89M1AWG4hY
+        sGA+PGAE6np+F5XButnvhV+zrwcCUmuG+QLEqFSftfPdnwVfghbc5IMxOa2/IQLftueEcldyWQd3f8cJ
+        NniAnfDu0Fmu5Noubuf7epl3MK1ykeszsUIqdrE1iOvVB+/VPNOvpu/J+Z/4OECofoiIEbrN0/g3N0aI
+        xAcmAjTzP+tGUSvRlgS51RMx5vNTBTDVTJpLSBVx7IJXhzbo/hbwDvSdMPjQJ/q71W7s6tr0nuoe7z7Z
+        teg6yc2et9htc3dPt/bN3VwPqW3ex+Lhuhaj8s0BM6wBEKQJ3R9JZpybYE66jsAvG3e3IcdAPQ0U1orC
+        wOLFccKvI/7UiqKLtT1WsDwqSA+iT8gqAK2bKA0+XrrQ9LmHPNrbXi59XUPDu0NmScWWug0a9XCr3dDV
+        lVzfVf5vb3dxuxGuRbdJqvgvTUph4okvDM6JL1MPWN2dRs0xxif/iwDz7vtkXNB1xG389f0982m5kz0L
+        4AlRrixXqlakizcRsvKH9CCyMeIHU2CS0n5+e7ecAgOG2nDqk9c0VGDVvyc1fPILQ1zJ1Z1dtzFzzbjC
+        IKTPRVKJQq0pCcaiLh1fnmNR87u6ARHSdS9py8hULpPxPJq8PyZ0HYn+8SxJ8eMkwbJEIt4UTLqQKIqN
+        T+rmgHk/WYYVKm0/Oe2hyA2q+TMfelyZsEGj7u5AWcEwIv0fDGzbTy7TNZ3d1pJ2olvpc2oCGj0JhOk6
+        A1tKWKaVB4MgrxpjPIk3j/vdwihqEdr+Q0i6RVnSixoi05C0lXQhOfawDJRQJTVUMNrzUp9pZikPmjLP
+        VG7ovMVi6pFPDTApb9VzavCc6oA26DOhIugfI8XHP90/1K19LewiGD/EGzJBjrMfhZIuZJ6QWc6QbnqQ
+        f0gMZgns2qw0p4CAESH8w/Q1DRmo463v6ukOfry/jfqEzolAOlCn0XMs2hX6vyagQbUpmxKM0+NqvioD
+        L9CXN4cf4g1gpOkMtsakQkgXmfhzI0g3npB8EIV7TL4eGQ7pwpFXRW5U8vzlCewCpI/KQaVSVvpQjBei
+        TPxPXzq9crFbJGnkOOcymI8v+1SPKXZO6N5JVJNJWSPwXBIB03UI6PrIHUtdwyyKZISLJSo29T9rRrqA
+        4Lb5XroZYIz334I9BPXCg0Mu0Vpy2rGo63MsN2JexDhUGX6ohQe/X2ZSNUyG34fDZluwofFH49w/Xh/u
+        jnl2oNtNVvH295Sp/+zptmxSasGMc18dbpYv1yOZqODQc+sLXfTsdD0CVPUHQ2aGjLZXjFEi8YngxyN+
+        345VSf6C89hPJM49n3wAUnH1WyODseZd7i6tKj0lC0gA9wJcEzGMiWE0IDIjScobLmYRESJk2GX0XPey
+        +slH5Zde9X+j3DliziFSqbgz69zS3ZVc0UnoaFYuYUb6SQwiXJuS6wXcnzSu03Gdi3979ivD3DuDZ7kR
+        M+abmqZc1VnFdQUN65TWuaNPBD92bya3KbcvZibIlolcLrJq4ihjXqIFCMxe/5M/ZKSbZSWpT5EzTmpp
+        sjAAg6FV6eRkQfICBn46Yo57TkZKs08nuIvfGOH+3Gqw2/fhvm6P5r3dTvf2ctuoP0TKNr6th1v31u4W
+        eDBmJAHT5K8aQswrFNxP99349h7WaC6SD0xQAw2BKq+J6i4UaERctNB0HMKY7fpNMyFIXIOavsizB56t
+        IZzvf1ZNOpGw5J66gf3W9mZ/00xh9IJv6IEhR52B7iqyFbJABsRuD/TOSBZSZswKVPiKBuWSNlhb2uHC
+        tiNcR6lTyo4ap9LzWdqFAibTtaXrFDDihFZLXdPN88f4JJ6dLsSrC+SQ/oy2ps8j0g2yZtKTfnOgHpiO
+        WtHSHuwwvsZ9Lw2FSuoyZq5JranTUAU3JMBsNUgyPPZ+qI+6iNGu5/gKy/bEDqirdA+aXOlCAxIk7Q2Z
+        Oi90TbzagPh2grBuxMcg6U9mvtnoBaQbENiIZ9bTFw1WX0iSeroQmzfqVivDipZLH9Su/wy3Q7OyTEUW
+        WZI3vf0zt2GjHm7Nm7plq/XAuQWBe6lhct/L3hzpyuTXYpnTcDECC2U4ETOm2ayfChph6yA83DN1zcOe
+        T/BuN8ESIPOSTrjc79pFwt3+RgZa6VkvDs5RzxSo8ftj6uQ2oO5wU94aONOsXFPboUotFJK4F3tPs5kK
+        jPy8MWCGu/X9se7opwfa0B5BDTPIeB7dRegeNQHXypjDZsDoYyy590RyuZdZvdVElcNA8r9LrsoWIIwt
+        Runw01PXZPKUPYl/D/it/c4iHcRpvtj/hLkMKjDgHN+QhPUd7sw1rpDeKBuyrkCiqZAHOk20AfNgZRYK
+        MQ8pPvH5Ie7+jhNdL0kaWRRYyQy0o2YZTDjj5WFux2a93M/uyEj8WsScub42RhzSreeuc3N3d82/RptV
+        XhOJxpAjXyud6kO2JpGvlBBh/NqEA0j8u00I98P6Y2PhCPZ1UYSsuHPpuLnGzOSDwc6yqJkYnTy3rsBl
+        mjlvsVX8Zo1LM65OqCJrChhEpXMfkui0T4oN/T/W+z/fGuWe+myKKxWzYcYMPRuJbz9klru3wwR3+kvD
+        3K8f7JO5V1q7cG+7rzSBNAK5W799tJ8s8JE28P/mwBmur6S5JlJMI2iha9KxfdT0+a8ODblM8ZJT4h9L
+        L57hf2aT/mBSMot72W9dyOyE+EY8uGW3STn9A77bFW8Mr7fABs9dIim7WgbN6rhJyYotNuibvaqlAewv
+        JpGd8ba6DTIgkXjshTs/Hm/n4DevL2buKbfuCjUQ1D+NkrrAf7Z+OPBO1aGn3DKmtCbrGewiNR0IwrQV
+        4uR4ba+wnTTpD9ZmtOEnSBe1TtzECnxyq0E5c3EwuLD+6jMYQCVhgIyZtcDdqApfHWOpLv1ldUAiuT99
+        82UdbEsIk6DKuNkL3KuMJl3e0T3VY7IxkQEVVCt1VKhhFQIxgh0DXSEpxgFrmlUSksOITCrPWXyVP1hm
+        15YagHTRvMRN7AXSmQj0E5jwuE7Jc+sTDGBgjB0vtWqD8kUCQZQ1buxmFjHM/Fuboe5pqexBqlAkEkai
+        YmEikTQY/IYsf36HylkXoIbJqw7FGpggH7gm5pt4eKiwif/5A+ngvX4X5m6YvAHSOUr9Uto9op/4+8tD
+        6009p0G/fMZLQ92Vb49yc2QkEW8mjlxyjaSN/jXAuBhR/+stZjI3ft9ygLv4jZHuwc4T3Xvqa0fNWGAS
+        yFhtL/XFL8n6xkBKZoBi7dc3g7nnS72m5uSUU99kgwT6cktlFg8B88U2M0ZCHPRby9yAdMHByRtQsS27
+        Tcx5IB1/69LJ9aqek6AhYRBFVi39I6NBk8sXuQMf6x9mrM5bW5bs4U8OcHd+Mt4GFZJDgUSIiE4xIHHk
+        UwMtDxppjrXDFZ2c+88P7snyYDCNbKb86bRA0T2e3HpQ6Jkx78TH3wosh+yPiPSDpGqbSAbpAtZkjG+A
+        23JGm8E5gwvEnsvGlycfVK/IYjCVL4ncqmlPc31gNLHtm94d4255b6x7vmyqBR5Q57R4Zhx8MGyWJc8h
+        taS6YkWbRANvWGU1jjwMtiR49c3vDJ5pv5NlLBYw5kiDSrpL7O96T2lIY3bxrIOXrHQfr35rpAMM7u/s
+        f8Jg1tOIb0AfGxpcYJWZkVLdyXPrEzkMTgDX5K6Px7nB6jP7yeh7vNtkm5GwRZPPbJRpLfWttbLCUwym
+        4hmEoDHscl/vestYweY54dkBOSFhgiABBi/yfIOXtuCaMTIiHbjK7xrpxJcSF5uPu3Xj7lkPAmRzzKjM
+        O4GqaOCFWEiFiV8n5GGwASlkuND3s0WxtAMM3gt/WAzes3kfG2VKlrVYQA2zPlja0Cq5uqMbIdsj3S16
+        1hmJn039boZ0wJxlbWEuK6hmLZrCmGwoa9ImjxU5wJEEL4FFiVrF3yRn+C+tq2BwfSDFYBpbU/XXHCcp
+        PiBNRQHvjn2T7hZJ73ln0IxQ1xBPCBQfsxPjkxKsE1mojGX44ouHTK0MOt4MYxW7D+LFaL2oWiZywViL
+        EAmTyxfmVdH1Bs9gDE3KxsiRxbAlwcxwwD4JvUcxwHSXNIPJmHlUVn9gqSZbtQcSP7MnqaUYzOrmQxIX
+        uu5j5rr0MBYW3V+fG1C0Fkwwg75+gPrPw55Q39OoRzYjpXLpWy9oOyJsDNUTsKZRw3fLAu8/ORNksC5A
+        xykjKT7pdykWiO+nsy7Jgbv5nWBK1FGehfDzDr+boRSD1xVGJi50XUfPcWkG45MxK66aRb+qBS4Brsq/
+        ZJEegKtDH0rIMFHJBh07//URZi0zFmtMDp1XDNCw1H9vegezFOZaTBr36fhWg9zAKfMy/bvOW1fGW55x
+        2qKg94RyWwg1We9kWzLvGiMsdf4xnoXwM6cPTjOYJezji1mbKh3FQnVcpQfV1Q/Ehz3txaHm3vz1+SE/
+        xILTlS5gBTfvNNEk6v2hs9z+j/b9wcWpK7M9U+kKGMVigIGQIQYNA/w8A3fspT5ykbzxRtTrE7lmofcq
+        BgZMyu0aqfczXhgc6hrO9CwMSvCVfhcGry/MTFxo4bEQg695a2SdGEyEiCE6kwiLLvW0yNF5rw03V4TM
+        Rws4JFWyGMCsg+5jy83Aq1y4xMZ7/65r9n+kr13HBLHN5R6RV4WU4UIlgWplSJCQ5I7NykwjHP/cYGPg
+        0GnzTf2xDAP+dNzYrursPh05x10n9RiVh7K10bND71YMFMhgW6wFqo7BSDBfHYkvfi8wI64YDMZgyelP
+        9XsNSQbprORsXaZnXPLGyMzYMA0BSfXSCiMZuCfUmBmOy2RlwnhGdSbPXeRGz1yQg/GzF9roUJQ/hrqb
+        JE3ysqSTAQVSa2kIWW6Wug7O53nxMUl9E/ne6fcqFgpkcByoCjH4Gr8b7IM7qeWm+wL8M6aEYl0mzy0E
+        xmDfnwWB2vQS9I/XRpj0/ObhvhaBshRZY7bOMdWq88SEtW7ubg0Df5lc6Ovbj7GFVCLc/sFYi2QxmIAm
+        2AqLmGurU/XXdTUj8LCWAzJaRc8kpMkE8GKMIIXACnmbpxjM8Oy5Lw0JMfh4z0L4mWNFJyUYK3p44kLX
+        PWhkdXGnth5oy9wnzy0EVBjTRHKkOATOEX55V0+3R/M+xsCrpc73eYiEPTEmKW0w3Z9vx9OI/osaSPI5
+        aXCeGiEJAUg6qrvz6Lnug2GzbfbhlPAksaKAcWGWKk7WO1b0Df/KlCV1ftLIauJ3M5SSYPxgPjQVX8x4
+        b8gPZr2nurhJxIhJn2EwwCq6uspOgoqXxB3Qop9r+vF4d4okchOfXFfwvULQ9fThhDtJwA+9p3kA2mLZ
+        14cUdx4521Ryss7xgx9k1YHc8iQ/4ZNjRV/td2EwyzN0TFzoxqjfCkWyyB2q6wQzsjW6ShKwis98SQYX
+        EkZgo6YMQgp1DX30b2RkHfZEf1PNJzHH10tfze8lSFXvcl8vmzVIBO/br3MH8WmYTJHpqz6S4UuseWZf
+        JM+pK3gGX4FJM5iFy1+RYRewfWzZJUj8vMvvZiglwUwXJQ0kvpgENbIJkg8Ce9zb0xblTJ5bCFAzZpVe
+        3tH9TpLYbsAMkwasYvra9Rt1zwwQFCKNnCuG49pcp/4X9wvrHKPJZkbkuYYEO4wrxoX57lJIIgnGYMAN
+        njrf+m8a0K90DXlbdXUX0yBCyFdlcmLR13Q0/ziQQpv8pF6OBJ8pxAt96GQ+6hhfTDyYkaPkg8AOd/aw
+        FJbkuYUABpuUUcls1ZfCCIbyCFOypAJDgIz72tAeKa5IeJpBIXhGs09i3eEyjk6Sn32aJI7UVpNsL93/
+        lKWOFqHSQqFXDBqSAPDB91L/T4IBU22quqauoEs4W8ZUOvmu5MoOoSUVv/Osg5dMY4kF1kgHSJqO5yPp
+        gmsTF1uL5psH6daE4VXbaaJICC6LGUhp5kQQgzZRP0iSGzMGiSjBIAIMuFLBa6qC1DlSTGClyUfjzO9d
+        9lUm/h0qIxE2Vsy57YNxFsmi8dHY6JbyXVMssKQSGjKdA4cmDRhYAz3r4OUvhNjgikkHb/W7MPiY5A1o
+        TU0/HJOzBBD9A2sm19bAoHKrZDBAEnFfJDUEMlC5/zdopq1CR3z4d49KVUYuTuj6ENTH3/TeWBv6S5cJ
+        aURiiVCdgU0gKWeBs2dLp1heeMA9KToi6UyvXAuzj2rZL+SaPuVZBx/5qHXO53j5Ix5i0gVZK8fy0sxh
+        ZSGz5AOR6BvfGVXr/ocFxrB+YzVdIJjqSWx4tir+Dvm4NkAROC8H8pcnzV1khkyyPKjbT0bMtpmNnIdq
+        J0e6vqU1DcrBgnLpmf+4piyYFuh/T4Vv4iGwlB1jZJJ08Ha/a6SLspLeuWk6J4sWxSo6+LPJc2sKWipz
+        eVB7mb4NSRWQ2jRTQqCPFbOIaF2ufvTtQTNslZwWXSe7454dZFmSGYs81YDUl/M+MBiJnDB3obu/wwRb
+        cJTQJj5vGZPK9F75mEujp4ESviR1p5jLVaCCL283PDhf+HVZ1oFr4hn+4iPfSQwymC9lIrn2W9uPEzcw
+        tXBYi745fQKJYSwQVls1zWADvqZN3KrIMHtDwpL5IkpVIEqW209qmyR07k/4cY8H1HhoDFHDUaOYKAkm
+        nHkeWZk6hi/+ZI/Jllhe1ZLBAKajwndE0nXf38oDYGAidG5tQMPfLbD2CbGIXrk5cCxaGn/mVjz8m2Df
+        e4hJBwCZeAewD+mCc/wNDLwUSxGmrTr65Yc7Vvk9grxAAk5GRftQIZYybhMS8Vq/6dbHYlGbQWUWbw2Z
+        jsrX/XCxTpdR9rruxXIOrcum2m+saHxdzmNFO45/JYnMF7Sh8VJWolZkl5CLhaTjbxOoQdJTVm2dwHct
+        Qm4pH/viCzCp8xFEVmUwvmkbTyCMiT8FGBxn4+kiQpZZN+PzrelZ6GT6sRR/bVwFi0UHjCMYg8W6n4wq
+        Vmudv3ipa9NraqZvNBVeuHQzzQR/mHQbKom+m0xLJLYq5vBexAHo7ykXks7ShpULMzlioWvqCmb0pzUl
+        gvXHJ/uFLOi7PcuMxMN/+t1s0h8sjxcPOelCxD5rwVEiO9s06ZH1YEBro9Ulz60JjMFVWdEwkj5U+0SM
+        SArAN8YfJRa9ReTPFmKkcf5lHW1SWz6JjbQRPjjdB2VkMhkzHei7v/u68MZcU/Dsk1sNzGEwX2IjspUS
+        JOZuH+tZBg/PFrb3P3NJf5qDrC0MBs/4GxmokENb9Am0Lr9SaoH9MMYZKrJGDPL9J6vQMVG80Qdj3fjZ
+        C2xhFsu0ZHaDD2xUCxlZWN7p8tINoYpb95yaCayoXCxryJwokuXTVnexQXlYqyPtrQDqPCC9rNWRjGDZ
+        Glp5SSdgaMXzTXXxyf4mdkNaDx+dSJvvqGk+55ZPIvKBCoNBBDMKlkRUtfrZA2XgwBDu07L7FBsG3BlV
+        zr2ShlUC5EgTS47KgJtHfjdTPXG1GGS4sN0IC8SQPZJPhXNt5LIUg/lEDEnHSa+3jTuKVR2wc973fIJ3
+        dLHx/O68pJMe9LtcuHbiZgaYSI50MuMewPSO8t1q0xczWoP/aSk7qOxAv5wXMFCqnFV4tpW7xFwlVCtS
+        R1CE4yEDDQaTtD5ixgJzqRhfJoOEeDgBDaS5qr45uvaPfqUAUntC5xUCkhBC+ecsLMd3lAPX7AWfxDPA
+        qsDxmh15SSddJmyii+23tq8kbmgMvDewHC4qhKVwaxv0oEKjWQIYVkc9NdCWUTIGFiLZnCvJZkpLk4/G
+        u0FTKm39D7Ix93igtxlbJZd3sPHcI54caMwnGtZW5xCSDQQRYvBuhEyZ30Rsm2vRIEzwpvyhawoB3Vxo
+        7Uq+oxz4rsMkzx/jk3h2opDtHoUI5gpHC/ZbN9g8cVPD0KlhM560HqQ4fX6hoJIBQRDizwzs45YEgxb5
+        4BsGMWQayp8kpcxXQu1iLJEocPmbI82SJnhf1foiqEbK0/jD8ZlGJ9V/rcrEtcWKS9O/EntO1ynBDtY/
+        CQiOjRhFfNK2evUM6US+h/Q39hMfmsxaq4MXYn3FtLGF2v7zMwOKsoZjEnQLqFRmATJQQL6WSSLSGuhj
+        g+A838+TfsvKeclpoWlEfepYGXL27SRdj+EVzWgMGDy1Bu/H7M3QoqTUMeuIpLoLoox8/NP4I34xJzj+
+        ZnO1FLUGbe23bnSukLWcUmg1GMAywu0HzahV4KM60HCoDNQVCfIPd57kdm/eu7BhRCBNwFTSUBmtq5B1
+        //Hw2RZkoUHs81AfS0hgqX4kqZhBDYD7GcqYIT3noXAQaUCSP9o+bzs1JV2wmXCT34fBGwhZC6JhXZ7z
+        0pCcvhiwUAvTNpPn1wdQm0SRiDCRXIdkZ2ZEVCPZV3SUQbM4llIYRuOhf8XYY+Cf6BnLIfFlcotUFcFK
+        zge+DpeuQ8CXTfk6eeAa+9orJP4gvXv7n9UTDPXb64V4prhuel3qIW749HluqzxL+S/Pz+fAqMhFY04T
+        8edj1eeaSjYLOsVgSTznUz4GG7DiWbWOT+jwPzle3AdpLXZ3kwQNFE2YniIKGIq9tf0o0yip6z7y/IBH
+        LL5yFjwDNaboZG3/zj43g7QlsB0/jIef+/LQYAGJUQ+fNr9eKygfYBwM/GaZ+rYeky0Lk2Q8S3eF2Vd0
+        kt+7wAY6WGwUNUwiPAkAMJyKD9232Fjy+RcZlzNty+j3VjJiAy7n98LvBeOHeMPCsfGMhoJIF9I6bCIx
+        TIZ04/OEOPBBRZIMTmZH2i+G6ds37WEjNtH5KwJIIUwj3RV3BoYST0ad028j6YQ/ybWKtMDyAHV3Wdvh
+        OcwFdHudRs4ONTTL3Ij4oe1Nwkb2ozaki8kOOMHvw2ACH7MSD7RCfCgDJD12GeH0FwbV+sMV9QHKi7/d
+        bUy5rRpbm8BMXcEzPxw6M+9HsvikfZ46i+PM4scegs1mgDcFU3SRtjcL8eRiPSTn2w34ghYgDxQWxt/9
+        UTg9ZkUCRhcjvFgo6NaYjkvdpOuL38QSJszJrPaTuvZ+6h/XVfxgePASfkd8qhVFF2t7BftLl2a+TK2H
+        ZQ1CAFyXkLoBGAy1GYz4MYIlL1ixLlRPSDRTdQOqGdvn54LVv3jBB7qPj/hTZ9KNWIvYloznIQLRrQVC
+        XAj6uh5qmempFhFwnT4dPiu01uJPAkgusWYmC6ST2QHjvSwJmcfzyFp/UrywZYSLQlEr0faF5G899JRU
+        IQyo45CqBrRQPtAYMP1/9CDJYO/7y4L1gkFKmDKPPdDaKtyT6h/31T5WVlTSTbcV7DsBeqgd0/aJREEM
+        SPLZLw6xOTShl9lcFjefdF8e6acNAahbghXM48pniPLhDWaIBLqwaQJBJvsukuqfBWP/4vfZFIeim2n7
+        ZyFeRc0/fLSQVTDSYIhJh14GoKL4eMeKsGCXN1gZiC/R5NNqHK9i8oBNKEvU/xNCnH9VVOKmAgMRfCg6
+        /tKWCvErQV1HduEYCaK/yfexaHw9hh1p4T9G4wtNxsgaHypJJypGYCFXVtLJM3BhMQg+pQ+pzlksNjeh
+        vdikhzD3xRYuVSHsmLb7CVmf3oFpLF7GUktVtd6jnuhn5yWvXdlBwKRF5wkuFACKwLgvDSCPUfVisn5V
+        33za3b7HoK0dqxeKbq4tHyc+mv358+fZMRXm6kQBY0SWYz5JRl3vKQOj+5j839xdWYDUTpZKPqvNYBf6
+        cAnAlWTkiHVP8tghnaxCPame+QClLckQ1X+9UvQQbS8QDrAfnlS4S1OFNUkmKZyPVYZGnqKXZomIi14b
+        ZmO0K6PKJjrWpmyqJULkiwcAAhkkr+cJsnwmrEtdUs8Cn3O3Ub3lSjzcb/mk2jbsR59ZUwEfSRQ4BlmJ
+        rFibz5IEuFGk5TKebFkWDVyiaYiUkbSgU1oPyus5APphXCFyt5D0wP0wVrMW8lbdXi7wLY3Cvy5aV9JD
+        gfXH6QKooI0TBTfQ1xDSJKKVT5IBfRbBkt80L7MJbwRGGqJE089WLPzcnfniYBsyreqdaLjHPdXffOE8
+        kttXsEGDiopyq0PV6UNC9d8jXB6kgjwrbMD+F1/EknybEI88RaBi+KImg9npD3ykQX4wqp3wHTMJaPl5
+        jJLlAqSVRkqSPyvBUr4qG6vvevhkXRWx+AGCqeWIVJd8ef0Xft+OrRCKHq4t45LZS/eIVPBTEy8SA/8X
+        44uMkFCSdxKRi0EU6DZVFMOTpNQsr3FmGhRahIb5Su+p7ojH+0piuwfDjUmsc0Mnm0CGj1vFoEYbwTIh
+        y8vnWp2pHtGItnZ3VL8NhlSgZwSbuphI2DtSmO9fKAsk0jEdEmmursIA57BeMqsNsDgbuUwYcDQYGF5X
+        Vc71hFG5H8EaGiEpOyz4hjSGPmWfBg0S//aStsPtPnk0Dvltz/j6sXpSvTH+juG6pf9txxsERYXRlvlN
+        DELbeh8JJjMttUzIeVnU3nRV5D0fjzMG5gsKJIFqp1/bWhYrH8o8/YXB7vGurHaXsU7d91+bVYsbguSh
+        2qnsCPzmOAEGcstoaGDcrAXutT7TbHYBksrn5NaTUViTxgfIiiSC109S+42eE3pfgQ9t2xh7RKovmPug
+        YCvlaGvHGyypgI8Ie/r9uJVq207ICohEoOJZ0OWYJ/s5AgShNKB8wDDDOmeCOhK+XdMeltbLR6wZ/Hi6
+        +ySbscfkLfBCzynugQ7jLW+Mb0ExiZ3lEliiCNVa0LN1LkEL1HH7QTOtwYTez2O8YBouYqK2uEKN7Ico
+        Ot4gicIlCk7c+lL7kSC94HFCpX/hLCB9SBbLBLGSLUzLFyCpClQ6xk90PdKeBsf5n/MKYWgEtAgSe+QT
+        /cytYxUeGmnovTwaCfZ9o/nz51tdqH6Yj20zSfxvO97gKSqotjsLjQQzJJIvoJd9XQhKM6CyMKhQlwQP
+        cJ2qCiAsD0RhR/rYo1v2s4BFVcnzAl7EJGE7/8727qoHVDLpUHXPylhRFBVa260EWumh/I6sRUgvzPeJ
+        uwqhyjGjBwuWVdXflVF1Wbvhbqs7upk6rSpgUkwg4czN5XkntRpo31EgWIGmqSYQQ0LExYJ9Zm7Bglhq
+        sVMIEB3uf9vxlZaiF9CWtSNOtB+iysqKuEVre5LwlZDjNyeBhQvDe46b6y58bahJNv116Nv3dQGz+fBf
+        Gbs+umV/WzqQNbNqGFnDiGppLyZavNi+eGOk999RaCXAZH/0R0DRy2iLWrpYyP5wk0iVwveKLxKyVhUI
+        gYrGQsYaHilp4iskD3ea4C55fZhFjDCaYDwBf4wuJJ7+MgK+tx33U29w0w5/rK/55Xd9ONb8XdQv/SoL
+        kuUJLaaxROB7U6aOoYRvu7VAXls8G/9HSXrBaHuMQCiOAIkdi2LZkCoJ1T1ZCFVklcDvRLVHPi3ZFEzu
+        JuxJRAwwmwAf2tbn8OfWIUIG3SBYuFZbe4eI9H4kx93gf/74KWKotnyh61yBqRdxWm6SVFkHCA8JWd+Q
+        KAQRoyMfGBAUqSK6VBNUCBiJpwlxHD56N0j7zNc9X9jf/7bjPwmKXpatQJbIjcItdlDEcVWc7bMVUN9b
+        C48Jy4RQpS8PfCKQF055YsZGAwSQyn6I0ELga9zRMdv+pMlXyCXCX4V49hykyvR7GdLvvYUrhdeEfkLW
+        t46LAAw+PmvwvnCXkLW4p35nMU372wikFhNqNOsYSp7zk6ZkRWiffnlf4XHhJH/YiIpNEr8FVqjnSzGb
+        CUcIBBRY77q3gCrN62sLiwU+X8Cn/O4XThe2Ebgf64St7h9lpN/psm4vPCqcIWAZL/9x25WZVGGkBuFD
+        nyQcLuzq/zLSb9tS8TUhnUdjyGJaiKL7RfePSL9JW0UFYyQyGH+y/8vOBauohpSsLO3TTxOzZaHNZsKd
+        ghkvSdIxv5dNNW0AUPoe+s00kauE5gILjcHkDQR/xioqCqUrVL+R6GsE/MtThYMF/GzU+14C/SIrFQRX
+        ntHxdQXSYYi0sSA613H93gJxdDQHESfUryUzrKIVRGIA/TbMxFADZCIi7X8RMHwYwrwthX8IpwmsL7WT
+        gKRG1+cwVMf83ipaoVRbRqxi4CpaCamk5P8BOHpnD/z8CfgAAAAASUVORK5CYII=
+</value>
+  </data>
   <data name="btnAsignarProfesor.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAAHgAAAB4CAYAAAA5ZDbSAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAL
